--- a/index.html
+++ b/index.html
@@ -8,3 +8,10 @@
   <link rel="stylesheet" media="screen" href="css/screen.css">
 </head>
 <body>
+  <p class="title">Please fill out the form below.Thank You!</p>
+    <div class="box">
+        <div>
+          <label>Email</label>
+          <input type="email" name="email_field" id="email" class="input" placeholder="youremail@type.com" autocomplete="email">  
+        </div>
+        
