--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
           <label>Email</label>
           <input type="email" name="email_field" id="email" class="input" placeholder="youremail@type.com" autocomplete="email">  
         </div>
-        
+        <div>
+          <label>Phone Number</label>
+          <input type="tel" id="phoneNum" name="phone_field" class="input" placeholder="+1(***)-***-****" maxlength="11" autocomplete="tel">
+        </div>
