--- a/index.html
+++ b/index.html
@@ -18,3 +18,7 @@
           <label>Phone Number</label>
           <input type="tel" id="phoneNum" name="phone_field" class="input" placeholder="+1(***)-***-****" maxlength="11" autocomplete="tel">
         </div>
+		<div>
+          <label>Date of Birth</label>
+          <input type="date" id="birthday" name="comments_field" class="input" autocomplete="birthday">
+        </div>
