--- a/index.html
+++ b/index.html
@@ -22,3 +22,10 @@
           <label>Date of Birth</label>
           <input type="date" id="birthday" name="comments_field" class="input" autocomplete="birthday">
         </div>
+		<input type="hidden" name="hidden_field" value="Michael Szewczyk">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+
+</body>
+</html>
