--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Lab2</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
-  <link rel="stylesheet" media="screen" href="css/normalize.css">
-  <link rel="stylesheet" media="screen" href="css/screen.css">
+  <link rel="stylesheet" media="screen" href="css\normalize.css">
+  <link rel="stylesheet" media="screen" href="css\screen.css">
 </head>
 <body>
   <p class="title">Please fill out the form below.Thank You!</p>
