--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
         </div>
 		<div>
           <label>Date of Birth</label>
-          <input type="date" id="birthday" name="comments_field" class="input" autocomplete="birthday">
+          <input type="date" id="bday" name="comments_field" class="input" autocomplete="bday">
         </div>
 		<input type="hidden" name="hidden_field" value="Michael Szewczyk">
         <input type="submit" value="Submit">
-      </form>
     </div>
 
 </body>
